--- a/webroot/css/default.css
+++ b/webroot/css/default.css
@@ -7646,3 +7646,31 @@ body.dark-theme .btn--warning {
 	top: 0;
 	z-index: 1000;
 }
+
+.paginator-link
+{
+	display:inline-block;
+	margin:0 2px;
+	padding:5px 10px;
+	border:1px solid #ccc;
+	text-decoration:none;
+	color: var(--paginator-button-text-color);
+	border-radius:3px;
+}
+
+.active-paginator-link
+{
+	display:inline-block;
+	margin:0 2px;
+	padding:5px 10px;
+	background: var(--active-paginator-button-background-color);
+	color: var(--active-paginator-button-text-color);
+	border:1px solid #333;
+	border-radius:3px;
+}
+
+.paginator-info
+{
+	color: var(--paginator-info-text-color);
+	margin-right:10px;
+}
